# pacman

./: CMakeLists.txt  bigCoin.c  bigCoin.h  collisionDetection.c  collisionDetection.h  common.c  common.h  controller.c  controller.h  drawScreen.c  drawScreen.h  entity.c  entity.h  eventHandler.c  eventHandler.h  ghost.c  ghost.h  main.c  maze.c  maze.h  pacman.c  pacman.h  pathFinding.c  pathFinding.h  smallCoin.c  smallCoin.h  wall.c  wall.h
cmake_modules/: FindSDL2.cmake
